@@ -10,6 +10,13 @@ Releases
 
   v8r5p2
   {
+    Modules = LHCbDIRAC:v8r5p3, LHCbWebDIRAC:v4r2p5
+    Depends = DIRAC:v6r17p5
+    LcgVer = 2016-11-03
+  }
+
+  v8r5p2
+  {
     Modules = LHCbDIRAC:v8r5p2, LHCbWebDIRAC:v4r2p5
     Depends = DIRAC:v6r17p3
     LcgVer = 2016-11-03
